# brooks-full-stack

./: requests.md
backend/rust/actix-server/: Cargo.toml
backend/rust/actix-server/src/: main.rs
backend/rust/actix-server/src/routes/: mod.rs  tasks.rs  tests.md  users.rs
backend/rust/todo_server/: Cargo.toml
backend/rust/todo_server/src/: lib.rs  main.rs
backend/rust/todo_server/src/database/: mod.rs  task_queries.rs  user_queries.rs
backend/rust/todo_server/src/routes/: errors.rs  mod.rs  requests.md  tasks.rs  testAPI.py  tests.md  users.rs
