[package]
name = "todo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
#actix-web = "4.0.1"
actix-web = "3"
chrono = { version = "0.4.19", features = ["serde"] }
derive_more = "0.99.17"
mobc = { version = "0.7.3", features = ["actix-rt"] }
mobc-postgres = "0.7.0"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
thiserror = "1.0.31"
#tokio = { version = "1.18.1", features = ["full"] }
#tokio-postgres = "0.7.6"
