[package]
name = "todo_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.7.0"
actix-web = "4.0.1"
chrono = { version = "0.4.19", features = ["serde"] }
deadpool-postgres = "0.10.2"
thiserror = "1.0.31"
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"
#tokio = { version = "1.18.1", features = ["full"] }
tokio-postgres = "0.7.6"
